Fix course overview columns height alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,15 +160,16 @@ header {
   }
 
 /* Course overview section styling */
-.course-overview{
+#course-overview-wrapper{
     margin-top: 2rem;
+    display: flex;
 }
-#why-right, #why-left, #why-center{
+.why-box{
     border: 1px solid whitesmoke;
     line-height: 2.5rem;
     width: 33%;
     box-sizing: border-box;
-    padding: 3rem 2rem;
+    padding: 3rem ;
 }
 
 #why-left{
@@ -184,13 +185,13 @@ header {
     border-radius: 2rem;
 }
 #why-center{
-    margin:10px auto;
+    margin:0 auto;
     background-color: #d8e5e7;
     color: #3a3a3a;
     border: 1px solid whitesmoke;
     border-radius: 2rem;
 }
-#why-center h2, #why-left h2, #why-right h2{
+.why-box h2{
     margin-bottom: 1rem;
     text-align: center;
     font-size: 200%;
@@ -204,7 +205,7 @@ header {
     background-color: #a06359;
 }
 #why-center:hover{
-    margin:10px auto;
+    margin:0 auto;
     background-color: hsl(61, 69%, 86%);
     color: #3a3a3a;
 }
